# PersonalSite

./: .gitignore  .pylintrc  README.md  caddyfile  pyproject.toml  requirements.txt  temp.html
.github/workflows/: updateProd.yml
DjangoSite/: Serve.py  db.sqlite3  manage.py  mid.txt  out.txt  output.txt  requirements.txt  resume_backup.csv  server.py  temp.html  update.bat  update.ps1
DjangoSite/DjangoSite/: asgi.py  settings.py  urls.py  wsgi.py
DjangoSite/accountPages/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
DjangoSite/assets/: backup.json  mediaPaths.csv  staticfiles.json
DjangoSite/assets/code-stats-embedded/: index.html
DjangoSite/assets/files/: Alias.json  MediaServerSummary.json  rerenderListMovie.csv
DjangoSite/assets/styles/: MasterStyle.0d877cde2517.css  MasterStyle.css  MediaStyle.a79f18ae22b6.css  MediaStyle.css  RatingsStyle.css  TabStyle.3761d3955a80.css
DjangoSite/landing/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
DjangoSite/landing/modules/: HardwareFunctions.py
DjangoSite/media/: LoadFromXML.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
DjangoSite/media/API/: DBAccess.py  Description.md  Routes.py
DjangoSite/media/migrations/: 0001_initial.py  0002_rename_genretags_media_genre_tags.py  0002_watchablemedia_addedby.py  0003_rename_show_podcast_creator.py  0003_watchablemedia_wikipage.py  0004_comic_novel_delete_book.py  0005_media_rating.py  0006_comic_read_novel_read_alter_watchablemedia_watched.py  0007_tvshow_series_end_tvshow_series_start.py  0008_alter_tvshow_series_end_alter_tvshow_series_start.py  0009_alter_tvshow_series_end_alter_tvshow_series_start.py  0010_alter_tvshow_series_end_alter_tvshow_series_start.py  0011_albums.py  0012_rename_albums_album.py  0013_alter_media_rating.py  0014_alter_media_genre_tags.py
DjangoSite/media/modules/: CheckDetails.py  DB_Tools.py  DownloadImage.py  FileRip.py  GetWikiInfo.py  HardwareFunctions.py  ImgResize.py  LoadFromXML.py  ModelTools.py  Model_Tools.py  TVRipTest.py  UpdateFromFolder.py  Utils.py  WebTools.py  Web_Tools.py  WikiParse.py
DjangoSite/media/templatetags/: DictTags.py  Graphs.py
DjangoSite/resume/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
DjangoSite/resume/migrations/: 0001_initial.py  0002_alter_education_qualification_level_and_more.py  0003_programminglanguage.py  0004_rename_programminglanguage_skillsandtools.py  0005_rename_languagename_skillsandtools_name.py  0006_skillsandtools_islang.py  0007_rename_islang_skillsandtools_is_a_language.py  0008_skillsandtools_is_a_program_and_more.py  0009_skillsandtools_skill_type.py  0010_remove_skillsandtools_is_a_language_and_more.py  0011_alter_skillsandtools_proficiency.py
DjangoSite/resume/templatetags/: resumeTags.py
DjangoSite/static/: Eps.csv  FileRip.py  Summary.json  backup.json  hone_backup.json  mediaPaths.csv  mediaPaths.xml
DjangoSite/static/files/: Alias.json  FileRip.py  Genres.json  MediaServerSummary (WD).json  MediaServerSummary.json  (+3 more)
(+30 files in other folders)
